labels, right click selections

--- a/client/index.html
+++ b/client/index.html
@@ -9,9 +9,10 @@
     <body>
         <div id="app">
             <main>
-                <ul id="grid">
-
-                </ul>
+                <section id="grid">
+                    <ul class="labels"> </ul>
+                    <ul class="content"></ul>
+                </section>
             </main>
         </div>
         <script type="module" src="/src/main.ts"></script>
