additional users, av lists, (switching broken)

--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,20 @@
         <div id="app">
             <main>
                 <section id="grid">
-                    <ul class="labels"> </ul>
-                    <ul class="content"></ul>
+                    <div class="content">
+                        <ul class="labels"></ul>
+                        <ul class="body"></ul>
+                    </div>
+                    <div class="legend">
+                        <ul></ul>
+                        <div>
+                            <p>Hold left click and drag to select multiple cells</p>
+                            <p>Right click, drag, and right click again to select multiple cells</p>
+                        </div>
+                    </div>
+                </section>
+                <section id="list">
+                    <ul></ul>
                 </section>
             </main>
         </div>
