ordered list combinations, localstorage (temp)

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
                         </div>
                     </div>
                 </section>
-                <section id="list">
+                <section id="lists">
                     <ul></ul>
                 </section>
             </main>
